fixed overflow

--- a/styles/About.module.scss
+++ b/styles/About.module.scss
@@ -29,6 +29,7 @@
             max-width: 40%;
             line-height: 60px;
            font-family: 'Montserrat', sans-serif;
+           padding-bottom: 20px;
 
            @include bp(mobile) {
                 font-size: 30px;
@@ -156,7 +157,12 @@
                         display: flex;
                         transform: translateY(0);
                         transition: transform 0.3s ease-out;
-    
+                        overflow-x: visible;
+
+                        &::-webkit-scrollbar {
+                            display: none;
+                        }
+
     
     
                             > span {
