--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -22,7 +22,7 @@
 
     @include bp(mobile) {
         width: 100%;
-        height: 80vh;
+        height: 70vh;
         margin-top: 15%;
     }
 
